<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/vistaCard"
        android:layout_width="344dp"
        android:layout_height="166dp"
        android:layout_marginBottom="2dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="4dp"
        card_view:cardBackgroundColor="@color/cardview_light_background"
        android:elevation="3dp"
        card_view:cardCornerRadius="4dp">

        <RelativeLayout
            android:id="@+id/relativ"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="16dp"
                card_view:cardCornerRadius="4dp"
                android:elevation="2dp"
                android:id="@+id/cardImage">
                <ImageView
                    android:id="@+id/pensionImage"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/todo"

                    android:scaleType="fitXY"
                    android:focusableInTouchMode="false"
                    android:src="@drawable/ic_launcher_background" />

            </androidx.cardview.widget.CardView>



            <TextView
                android:id="@+id/textCardNombreP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignTop="@+id/cardImage"
                android:layout_marginStart="16dp"
                android:text="@string/nombre_pension"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="@dimen/text_primary"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textCardDireccionP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/textCardNombreP"
                android:layout_centerVertical="true"
                android:text="@string/direccion"
                android:textSize="@dimen/text_secundary" />

            <TextView
                android:id="@+id/textTelefonoP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/textCardNombreP"
                android:layout_below="@+id/textCardDireccionP"
                android:text="@string/telefono"
                android:textSize="@dimen/text_secundary" />

            <RatingBar
                android:id="@+id/ratingBarCard"
                style="?attr/ratingBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignStart="@+id/textCardNombreP"
                android:layout_marginTop="53dp"
                android:numStars="5"
                android:rating="5"
                android:stepSize="0.5"
                android:theme="@style/RatingBar" />

        </RelativeLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>
